--- a/languages/en/commonly used/emoji-edited.json
+++ b/languages/en/commonly used/emoji-edited.json
@@ -1,3 +1,3 @@
 {
-    "content": "You changed the name of {emoji} to {newName}"
+    "content": "You changed the name of {emoji} ({oldName}) to {newName}"
 }
