--- a/languages/en/commonly-used/emoji-edited.json
+++ b/languages/en/commonly-used/emoji-edited.json
@@ -1,3 +1,3 @@
 {
-    "content": "You changed the name of {emoji} ({oldName}) to {newName}"
+    "content": "You changed the name of {emoji} from `{old_emoji_name}` to `{new_emoji_name_interaction}`."
 }
