--- a/languages/variables.json
+++ b/languages/variables.json
@@ -1,5 +1,6 @@
 {
     "emoji": "args.oldEmoji.toString()",
     "old_emoji_name": "args.oldEmoji.name",
-    "new_emoji_name_interaction": "args.interaction.options.get('name').value"
+    "new_emoji_name_interaction": "args.interaction.options.get('name').value",
+    "error": "args.error"
 }
