Added the Emoji Info command

--- a/languages/de/commonly-used/emoji-edited.json
+++ b/languages/de/commonly-used/emoji-edited.json
@@ -1,3 +1,3 @@
 {
-    "content": "Du hast den Namen des Emojis {emoji} von `{old_emoji_name}` zu `{new_emoji_name_interaction}` geändert!"
+    "content": "Du hast den Namen des Emojis {emoji} von `{current_emoji_name}` zu `{new_emoji_name_interaction}` geändert!"
 }
