--- a/languages/en/interactions/slash_commands/emoji-info.json
+++ b/languages/en/interactions/slash_commands/emoji-info.json
@@ -1,33 +1,46 @@
 {
     "embed": {
         "color": "0x0099ff",
-        "title": "{old_emoji_name}",
-        "url": "https://discord.js.org",
-        "author": {
-            "name": "Some name",
-            "icon_url": "https://i.imgur.com/AfFp7pu.png",
-            "url": "https://discord.js.org"
-        },
-        "description": "Some description here",
+        "title": "Emoji info", 
         "thumbnail": {
-            "url": "https://i.imgur.com/AfFp7pu.png"
+            "url": "{current_emoji_url}"
         },
         "fields": [
             {
-                "name": "Regular field title",
-                "value": "Role: {
+                "name": "Name:",
+                "value": "{current_emoji_name}",
+                "inline": true
+            },
+            {
+                "name": "ID:",
+                "value": "{current_emoji_id}",
+                "inline": true
+            },
+            {
+                "name": "Manged:",
+                "value": "{current_emoji_managed}",
+                "inline": true
+            },
+            {
+                "name": "Locked to:",
+                "value": "{current_emoji_roles}",
+                "inline": false
+            },
+            {
+                "name": "Created at:",
+                "value": "<t:{current_emoji_creation_timestamp}:D>",
+                "inline": true
+            },
+            {
+                "name": "Uploaded by:",
+                "value": "{current_emoji_author}",
+                "inline": true
+            },
+            {
+                "name": "Download link:",
+                "value": "[Click here]({current_emoji_url})",
+                "inline": true
             }
-        ],
-        "image": {
-            "url": "https://i.imgur.com/AfFp7pu.png"
-        },
-        "timestamp": "{new Date()}",
-        "footer": {
-            "text": "Some footer text here"
-        }
-    },
-    "footer": {
-        "text": "Some footer text here",
-        "icon_url": "https://i.imgur.com/AfFp7pu.png"
+        ]
     }
 }
