--- a/languages/variables.json
+++ b/languages/variables.json
@@ -1,8 +1,13 @@
 {
     "no_args": "",
-    "old_emoji_roles": "args.oldEmoji?._roles",
-    "emoji": "args.oldEmoji.toString()",
-    "old_emoji_name": "args.oldEmoji.name",
+    "emoji": "args.currentEmoji.toString()",
+    "current_emoji_roles": "args.rolesCurrentEmoji == 'Nothing'  ? args.rolesCurrentEmoji : args.rolescurrentEmoji?.join(', ')",
+    "current_emoji_id": "args.currentEmoji?.id",
+    "current_emoji_name": "args.currentEmoji.name",
+    "current_emoji_author": "args.currentEmoji.fetchAuthor()?.tag",
+    "current_emoji_creation_timestamp": "Math.floor(args.currentEmoji.createdTimestamp / 1000)",
+    "current_emoji_url": "args.currentEmoji.url",
+    "current_emoji_managed": "args.currentEmoji.managed.toString()",
     "new_emoji_name": "args.newEmoji.name",
     "new_emoji_name_interaction": "args.interaction.options?.get('name').value",
     "error": "args.error",
