Language set slash command

--- a/languages/de/interactions/slash_commands/emoji-info.json
+++ b/languages/de/interactions/slash_commands/emoji-info.json
@@ -1,7 +1,7 @@
 {
     "embed": {
         "color": "2f3136",
-        "title": "Emoji Informationen", 
+        "title": "Emoji info", 
         "thumbnail": {
             "url": "{current_emoji_url}"
         },
