--- a/languages/en/errors/default-emoji-not-supported.json
+++ b/languages/en/errors/default-emoji-not-supported.json
@@ -1,3 +1,3 @@
 {
-    "content": "You need to a valid emoji. Example: `<:emoji_ghost:658538492321595393>`\nDefault discord emojis like 🐨 aren't supported by the bot at the moment."
+    "content": "You need to use a valid emoji. Example: `<:emoji_ghost:658538492321595393>`\nDefault discord emojis like 🐨 aren't supported by the bot."
 }
