Created almost all commands files not all of content tho

--- a/languages/de/interactions/slash_commands/emoji-info.json
+++ b/languages/de/interactions/slash_commands/emoji-info.json
@@ -1,5 +1,7 @@
 {
-    "nothing": "Nichts",
+    "nothing": "Jede Rolle",
+    "true": "Ja",
+    "false": "Nein",
     "embed": {
         "color": "2f3136",
         "title": "Emoji Informationen", 
