--- a/languages/en/interactions/slash_commands/emoji-info.json
+++ b/languages/en/interactions/slash_commands/emoji-info.json
@@ -1,5 +1,7 @@
 {
     "nothing": "Nothing",
+    "true": "True",
+    "false": "False",
     "embed": {
         "color": "2f3136",
         "title": "Emoji info", 
