--- a/languages/variables.json
+++ b/languages/variables.json
@@ -1,5 +1,10 @@
 {
     "no_args": "",
+    "interaction_user_tag": "interaction.user?.tag",
+    "autolock_roles": "args.autoLockRoles",
+    "interaction_options_channel": "interaction.options?.get('channel')?.value",
+    "interaction_channel": "interaction.options?.get('channel')?.value || interaction.channel?.id",
+    "permissions": "args.permissions",
     "emoji": "args.currentEmoji.toString()",
     "current_emoji_roles": " let roles = (args.rolesCurrentEmoji == 'Nothing'  ?  await client.getLanguage.getCommandContent('emoji-info', ['interactions', 'slash_commands'], interaction, { 'type': 'nothing', 'interaction': interaction}) : args.rolesCurrentEmoji?.join(', ')); return roles",
     "current_emoji_id": "args.currentEmoji?.id",
@@ -7,7 +12,7 @@
     "current_emoji_author": "let author = await args.currentEmoji.fetchAuthor(); return author.username + '#' + author.discriminator",
     "current_emoji_creation_timestamp": "Math.floor(args.currentEmoji.createdTimestamp / 1000)",
     "current_emoji_url": "args.currentEmoji.url",
-    "current_emoji_managed": "args.currentEmoji.managed.toString()",
+    "current_emoji_managed": "return args.currentEmoji.managed == true ? await client.getLanguage.getCommandContent('emoji-info', ['interactions', 'slash_commands'], interaction, { 'type': 'true', 'interaction': interaction}) : await client.getLanguage.getCommandContent('emoji-info', ['interactions', 'slash_commands'], interaction, { 'type': 'false', 'interaction': interaction})",
     "new_emoji_name": "args.newEmoji.name",
     "new_emoji_name_interaction": "args.interaction.options?.get('name').value",
     "new_language_interaction": "args.interaction.options?.get('language')?.value",
