--- a/languages/en/errors/invalid-emojis.json
+++ b/languages/en/errors/invalid-emojis.json
@@ -1,3 +1,3 @@
 {
-    "content": "You need to valid emojis from this server like <:eg_smile:948895712559644713>"
+    "content": "You need to use valid emojis from this server like <:eg_smile:948895712559644713>"
 }
