Created almost every file for the english folder

--- a/languages/en/interactions/slash_commands/emojis-locked.json
+++ b/languages/en/interactions/slash_commands/emojis-locked.json
@@ -1,3 +1,14 @@
 {
-    "content": ""
+    "content": "These emojis are locked to a role.",
+    "embed": {
+        "color": "2f3136",
+        "title": "{interaction_guild_name_blacklist}'s locked emojis",
+        "description": "{text}",
+        "thumbnail": {
+            "url": "{interaction_guild_icon}"
+        },
+        "footer": {
+            "text": "Used by {user_tag}"
+        }
+    }
 }
