--- a/languages/en/interactions/slash_commands/blacklist-all-emojis.json
+++ b/languages/en/interactions/slash_commands/blacklist-all-emojis.json
@@ -6,7 +6,7 @@
         "thumbnail": {
             "url": "https://cdn.discordapp.com/attachments/914115279351578655/914119586469801994/eg_blacklist.png"
         },
-        "description": "Blacklisted by\nUser Tag: ${interaction.user.tag}\nUser ID: ${interaction.user.id}\nComment: ${interaction_options_comment}\nCreator: ${interaction_options_creator}`",
+        "description": "Blacklisted by\nUser Tag: {user_tag}\nUser ID: {interaction_user_id}\nComment: {interaction_options_comment}\nCreator: {interaction_options_creator}",
         "timestamp": "{timestamp}"
     }
 }
