--- a/languages/en/interactions/slash_commands/help.json
+++ b/languages/en/interactions/slash_commands/help.json
@@ -1,5 +1,10 @@
 {
-    "help_page_embed": {
+    "info_content": "",
+    "info": {
+        "title": "Information about \"{placeholder}\""
+    },
+    "content": "You can only see the dropdown and the buttons?\nThen read this https://docs.emojiguardian.xyz/troubleshooting",
+    "embed": {
         "title": "Emoji Guardian Help Page",
         "color": "2f3136",
         "thumbnail": {
@@ -24,22 +29,13 @@
             }
         ]
     },
-    "commands_embed": {
-        "title": "{placeholder}",
-        "color": "2f3136",
-        "thumbnail": {
-            "url": "https://cdn.discordapp.com/attachments/914115279351578655/947877196561793034/EG_Logo.png"
-        },
-        "description": "{text}"
-    },
-    "content": "You can only see the dropdown and the buttons?\nThen read this https://docs.emojiguardian.xyz/troubleshooting",
     "components": [
         {
             "type": 1,
             "components": [
                 {
                     "type": 3,
-                    "custom_id": "help",
+                    "custom_id": "helpe",
                     "options": [
                         {
                             "label": "Help Page",
