--- a/languages/en/interactions/slash_commands/log-remove.json
+++ b/languages/en/interactions/slash_commands/log-remove.json
@@ -1,3 +1,4 @@
 {
-    "content": "You removed the log channel from this server."
+    "content": "You removed the log channel from this server.",
+    "log": "{user_tag} reset the log for this server."
 }
