--- a/languages/en/interactions/slash_commands/log-set.json
+++ b/languages/en/interactions/slash_commands/log-set.json
@@ -1,3 +1,4 @@
 {
-    "content": "You set the log channel to <#{interaction_options_channel}>"
+    "content": "You set the log channel to <#{interaction_options_channel}>",
+    "log": "{user_tag} set the log to this channel"
 }
