--- a/languages/en/interactions/select_menus/help.json
+++ b/languages/en/interactions/select_menus/help.json
@@ -39,7 +39,7 @@
             "components": [
                 {
                     "type": 3,
-                    "custom_id": "help",
+                    "custom_id": "helpe",
                     "options": [
                         {
                             "label": "Help Page",
