--- a/crowdin-translations/translations/de/help.json
+++ b/crowdin-translations/translations/de/help.json
@@ -17,7 +17,7 @@
             },
             {
                 "name": "{emoji_support}Wie erhalte ich Support?",
-                "value": "> Du kannst [Support Server](https://discord.gg/EbBsuxVNYT) beitreten oder du kannst `Lost Paul#3453` oder `Danu#4422` anschreiben"
+                "value": "> Du kannst dem [Support Server](https://discord.gg/EbBsuxVNYT) beitreten oder du kannst `Lost Paul#3453` oder `Danu#4422` anschreiben"
             }
         ]
     },
