--- a/crowdin-translations/translations/hu/invalid-image.json
+++ b/crowdin-translations/translations/hu/invalid-image.json
@@ -1,3 +1,3 @@
 {
-    "content": "Érvénytelen képhivatkozás, a linknek https:// vagy https//-el kell kezdődnie és .gif vagy .png-vel kell végződnie. A közvetett hivatkozásokat a bot nem támogatja."
+    "content": "Érvénytelen képhivatkozás, a linknek https:// vagy http://-el kell kezdődnie és .gif vagy .png-vel kell végződnie. A közvetett hivatkozásokat a bot nem támogatja."
 }
